[package]
name = "wooting-overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wooting-analog-wrapper = { git = "https://github.com/WootingKb/wooting-analog-sdk" }
egui = "0.22.0"
eframe = "0.22.0"
config = "0.13"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }